<resources>
    <!-- Activity main strings -->
    <string name="app_name">empty_views_activity</string>
    <string name="login">Вход в Investio</string>
    <string name="email_hint">Email</string>
    <string name="login_in_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>

    <!-- Activity password logging strings -->
    <string name="enter_password">Введите пароль</string>
    <string name="enter_password_hint">Укажите пароль, привязанный к почте</string>
    <string name="button_continue">Продолжить</string>
    <string name="example_email">example@mail.ru</string>
    <string name="backButton">backButton</string>

    <!-- Activity registration strings -->
    <string name="registration_text">Регистрация</string>
    <string name="input_password">Введите пароль</string>
    <string name="confirmed_password">Повторите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="cathand">cathand</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>


</resources>