<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/enter_password"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="30sp"
        android:layout_marginTop="55sp"/>

    <TextView
        android:id="@+id/textEnterPasswordHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_hint"
        android:layout_below="@id/textEnterPassword"
        android:textAlignment="center"
        android:textColor="@color/textHintColor"
        android:textSize="15sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/montserrat_medium"
        />

    <TextView
        android:id="@+id/exampleEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_email"
        android:layout_below="@id/textEnterPasswordHint"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_medium"
        />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/exampleEmail"
        android:layout_marginTop="30sp"
        android:layout_marginHorizontal="35sp"
        android:hint="@string/enter_password"
        android:textColor="@color/textColorWhite"
        android:textSize="20sp"
        android:textColorHint="@color/textHintColor"
        android:inputType="textPassword"
        android:backgroundTint="@color/tintColor"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonContinueLoginIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35sp"
        android:textSize="20sp"
        android:text="@string/button_continue"
        android:backgroundTint="@color/buttonColorWhite"
        android:textColor="@color/textColorDark"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="30sp"
        />

    <ImageButton
        android:id="@+id/buttonLoginBack"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:scaleType="centerCrop"
        android:padding="10sp"
        android:fontFamily="monospace"
        android:backgroundTint="@color/background_dark"
        android:src="@drawable/back"
        app:tint="@color/buttonColorWhite"
        android:contentDescription="@string/backButton"/>


</RelativeLayout>